hw4 mission icons
додав icon в секцію mission

--- a/index.html
+++ b/index.html
@@ -66,25 +66,45 @@
 <!--section our-mission -->
             <section class="our-mission">
                 <div class="container">
-            <h2 class="mission to-hide">Наша місія для Вас
+            <h2 class="mission-to-hide">Наша місія для Вас
             </h2>
             <ul class="list">
                 <li class="mission-list">
+                    <div class="mission-icons">
+                        <svg class="svg-mission" width="70px" height="70px">
+                            <use href="./images/icons.svg.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3 class="mission-heading">Внимание к деталям</h3>
                     <p class="features" >Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li class="mission-list">
+                    <div class="mission-icons">
+                        <svg class="svg-mission" width="70px" height="70px">
+                            <use href="./images/icons.svg.svg#icon-clock"></use>
+                        </svg>
+                    </div>
                     <h3 class="mission-heading">Пунктуальность</h3>
                     <p class="features">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li class="mission-list">
+                    <div class="mission-icons">
+                        <svg class="svg-mission" width="70px" height="70px">
+                            <use href="./images/icons.svg.svg#icon-diagram"></use>
+                        </svg>
+                    </div>
                     <h3 class="mission-heading">Планирование</h3>
                     <p class="features">Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li class="mission-list">
+                    <div class="mission-icons">
+                        <svg class="svg-mission" width="70px" height="70px">
+                            <use href="./images/icons.svg.svg#icon-astronaut"></use>
+                        </svg>
+                    </div>
                     <h3 class="mission-heading">Современные технологии</h3>
                     <p class="features">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
