--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
     <!-- footer -->
     <footer class="footer">
         <div class="container">
+            <div class="box-footer">
         <a class="footer-logo" href=""> <span class="web-color-footer">Web</span>Studio
         </a>
         <address class="address-footer">
@@ -389,7 +390,45 @@
     </li>
 </ul>
         </address>
-        </div>
+    </div>
+    
+        <div class="box-footer">
+            <p class="footer-icons-paragraf">присоединяйтесь</p>
+                  <ul class="ul-icons-footer">
+                            <li class="li-icons-footer"> 
+                                <a class="a-icons-footer" href=""> 
+                                <svg class="icons-footer" width="20" height="20">
+                                    <use href="./images/icons.svg.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                            </li>
+
+                            <li class="li-icons-footer"> 
+                                <a class="a-icons-footer" href=""> 
+                                    <svg class="icons-footer" width="20" height="20">
+                                    <use href="./images/icons.svg.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                            </li>
+
+                            <li class="li-icons-footer"> 
+                                <a class="a-icons-footer" href=""> 
+                                    <svg class="icons-footer" width="20" height="20">
+                                    <use href="./images/icons.svg.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                            </li>
+
+                            <li class="li-icons-footer"> 
+                                <a class="a-icons-footer" href=""> 
+                                    <svg class="icons-footer" width="20" height="20">
+                                    <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                            </li>
+                            </ul>
+                        </div>
+                    </div>
             </footer>
             
 </body>
