--- a/portfolio.html
+++ b/portfolio.html
@@ -163,22 +163,63 @@
     <!-- footer -->
     <footer class="footer">
         <div class="container">
-            <a class="footer-logo" href=""> <span class="web-color-footer">Web</span>Studio
-            </a>
-            <address class="address-footer">
-                <ul class="list-footer">
-                    <li class="list-address-footer">
-                        <p>г. Киев, пр-т Леси Украинки, 26</p>
-                    </li>
-                    <li class="list-address-footer">
-                        <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li class="list-address-footer">
-                        <a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
-        </div>
-    </footer>
+            <div class="box-footer">
+        <a class="footer-logo" href=""> <span class="web-color-footer">Web</span>Studio
+        </a>
+        <address class="address-footer">
+<ul class="list-footer">
+    <li class="list-address-footer">
+      <p>г. Киев, пр-т Леси Украинки, 26</p>  
+    </li>
+    <li class="list-address-footer">
+    <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    </li>
+    <li class="list-address-footer">
+    <a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+    </li>
+</ul>
+        </address>
+    </div>
+    
+        <div class="box-footer">
+            <p class="footer-icons-paragraf">присоединяйтесь</p>
+                  <ul class="ul-icons-footer">
+                            <li class="li-icons-footer"> 
+                                <a class="a-icons-footer" href=""> 
+                                <svg class="icons-footer" width="20" height="20">
+                                    <use href="./images/icons.svg.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                            </li>
+
+                            <li class="li-icons-footer"> 
+                                <a class="a-icons-footer" href=""> 
+                                    <svg class="icons-footer" width="20" height="20">
+                                    <use href="./images/icons.svg.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                            </li>
+
+                            <li class="li-icons-footer"> 
+                                <a class="a-icons-footer" href=""> 
+                                    <svg class="icons-footer" width="20" height="20">
+                                    <use href="./images/icons.svg.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                            </li>
+
+                            <li class="li-icons-footer"> 
+                                <a class="a-icons-footer" href=""> 
+                                    <svg class="icons-footer" width="20" height="20">
+                                    <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                            </li>
+                            </ul>
+                        </div>
+                    </div>
+            </footer>
+            
 </body>
+
 </html>
