--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                         </a>
                       <ul class="list">
                 <li class="header-li">
-                    <a class="header-list" href="./index.html"> <span class="studio-color">Студия</span> 
+                    <a class="header-list" href="./index.html">                      
+                        <span class="studio-color">Студия</span> 
                     </a>
                 </li>
                 <li class="header-li">
@@ -43,10 +44,24 @@
         </nav>
         <ul class="list">
             <li>
-                <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="header-contact" href="tel:+380961111111">
+                    <svg class="icons-header" width="16" heigth="12">
+                        <use href="./images/icons.svg.svg#icon-e-mail">
+                         
+                        </use>
+                    </svg>
+                    <span>  +38 096 111 11 11 </span> 
+                </a>
             </li>
             <li>
-                <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com
+                <a class="header-contact" href="mailto:info@devstudio.com">
+                    <svg class="icons-header" width="10" heigth="16">
+                        <use href="./images/icons.svg.svg#icon-smartphone">
+
+                        </use>
+                    </svg>
+                    <span> info@devstudio.com </span>
+                    
                 </a>
             </li>
         </ul>
