--- a/icons/icomoon/demo-external-svg.html
+++ b/icons/icomoon/demo-external-svg.html
@@ -22,7 +22,27 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-smartphone"><use xlink:href="symbol-defs.svg#icon-smartphone"></use></svg><span class="name"> icon-smartphone</span>
+                <svg class="icon icon-martphone"><use xlink:href="symbol-defs.svg#icon-martphone"></use></svg><span class="name"> icon-martphone</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-antenna"><use xlink:href="symbol-defs.svg#icon-antenna"></use></svg><span class="name"> icon-antenna</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-clock"><use xlink:href="symbol-defs.svg#icon-clock"></use></svg><span class="name"> icon-clock</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-diagram"><use xlink:href="symbol-defs.svg#icon-diagram"></use></svg><span class="name"> icon-diagram</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-stronaut"><use xlink:href="symbol-defs.svg#icon-stronaut"></use></svg><span class="name"> icon-stronaut</span>
             </div>
         </div>
         <div class="glyph fs1">
@@ -43,26 +63,6 @@
         <div class="glyph fs1">
             <div class="clearfix pbs">
                 <svg class="icon icon-linkedin"><use xlink:href="symbol-defs.svg#icon-linkedin"></use></svg><span class="name"> icon-linkedin</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-antenna"><use xlink:href="symbol-defs.svg#icon-antenna"></use></svg><span class="name"> icon-antenna</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-clock"><use xlink:href="symbol-defs.svg#icon-clock"></use></svg><span class="name"> icon-clock</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-diagram"><use xlink:href="symbol-defs.svg#icon-diagram"></use></svg><span class="name"> icon-diagram</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-astronaut"><use xlink:href="symbol-defs.svg#icon-astronaut"></use></svg><span class="name"> icon-astronaut</span>
             </div>
         </div>
         <div class="glyph fs1">
