--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <ul class="list">
                 <li class="mission-list">
                     <div class="mission-icons">
-                        <svg class="svg-mission" width="70px" height="70px">
+                        <svg class="svg-mission" width="70" height="70">
                             <use href="./icons.svg.svg#icon-antenna"></use>
                         </svg>
                     </div>
@@ -96,7 +96,7 @@
                 </li>
                 <li class="mission-list">
                     <div class="mission-icons">
-                        <svg class="svg-mission" width="70px" height="70px">
+                        <svg class="svg-mission" width="70" height="70">
                             <use href="./icons.svg.svg#icon-clock"></use>
                         </svg>
                     </div>
@@ -106,7 +106,7 @@
                 </li>
                 <li class="mission-list">
                     <div class="mission-icons">
-                        <svg class="svg-mission" width="70px" height="70px">
+                        <svg class="svg-mission" width="70" height="70">
                             <use href="./icons.svg.svg#icon-diagram"></use>
                         </svg>
                     </div>
@@ -116,7 +116,7 @@
                 </li>
                 <li class="mission-list">
                     <div class="mission-icons">
-                        <svg class="svg-mission" width="70px" height="70px">
+                        <svg class="svg-mission" width="70" height="70">
                             <use href="./icons.svg.svg#icon-stronaut"></use>
                         </svg>
                     </div>
