--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         <address class="address-footer">
 <ul class="list-footer">
     <li class="list-address-footer">
-      <p>г. Киев, пр-т Леси Украинки, 26</p>  
+      <p class="p-list-contact">г. Киев, пр-т Леси Украинки, 26</p>  
     </li>
     <li class="list-address-footer">
     <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
