--- a/portfolio.html
+++ b/portfolio.html
@@ -30,11 +30,11 @@
                 </a>
                 <ul class="list">
                     <li class="header-li">
-                        <a class="header-list" href="./index.html"> <span class="studio-color">Студия</span>
+                        <a class="header-list" href="./index.html">Студия 
                         </a>
                     </li>
                     <li class="header-li">
-                        <a class="header-list" href="./portfolio.html">Портфолио
+                        <a class="header-list" href="./portfolio.html"><span class="portfolio-color">Портфолио</span>
                         </a>
                     </li>
                     <li class="header-li">
@@ -198,7 +198,7 @@
         <address class="address-footer">
 <ul class="list-footer">
     <li class="list-address-footer">
-      <p>г. Киев, пр-т Леси Украинки, 26</p>  
+        <p class="p-list-contact">г. Киев, пр-т Леси Украинки, 26</p>    
     </li>
     <li class="list-address-footer">
     <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
