add p in img-about

--- a/index.html
+++ b/index.html
@@ -133,13 +133,30 @@
             <h2 class="about-heading">Чем мы занимаемся</h2>
             <ul class="list">
                 <li>
-                    <img class="img-about" src="./images/about/img-1-squoosh.jpg" alt="development for pc" width="370" height="295">
+                    <img class="img-about" 
+                    src="./images/about/img-1-squoosh.jpg" 
+                    alt="development for pc" 
+                    width="370" 
+                    height="295">
+                    <p class="label-img-about">Десктопні додатки</p>
                 </li>
-                <li>
-                    <img class="img-about" src="./images/about/img-2-squoosh.jpg" alt="development for mobile" width="370" height="295">
+                
+                <li>            
+                    <img class="img-about" 
+                    src="./images/about/img-2-squoosh.jpg" 
+                    alt="development for mobile" 
+                    width="370" 
+                    height="295">
+                    <p class="label-img-about">Мобільні додатки</p>
                 </li>
+
                 <li>
-                    <img class="img-about" src="./images/about/img-3-squoosh.jpg" alt="graphic design" width="370" height="295">
+                    <img class="img-about" 
+                    src="./images/about/img-3-squoosh.jpg" 
+                    alt="graphic design" 
+                    width="370" 
+                    height="295">
+                    <p class="label-img-about">Дизайнерські рішення</p>
                 </li>
             </ul>
             </div>
