add text with background
Added text with background to the `What We Do` section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
             <div class="container">
             <h2 class="about-heading">Чем мы занимаемся</h2>
             <ul class="list">
-                <li>
+
+                <div class="div-about">
+                <li class="li-about">
                     <img class="img-about" 
                     src="./images/about/img-1-squoosh.jpg" 
                     alt="development for pc" 
@@ -140,7 +142,9 @@
                     height="295">
                     <p class="label-img-about">Десктопні додатки</p>
                 </li>
-                
+                </div>
+            
+                <div class="div-about">
                 <li>            
                     <img class="img-about" 
                     src="./images/about/img-2-squoosh.jpg" 
@@ -149,7 +153,9 @@
                     height="295">
                     <p class="label-img-about">Мобільні додатки</p>
                 </li>
+            </div>
 
+                <div class="div-about">
                 <li>
                     <img class="img-about" 
                     src="./images/about/img-3-squoosh.jpg" 
@@ -158,6 +164,7 @@
                     height="295">
                     <p class="label-img-about">Дизайнерські рішення</p>
                 </li>
+                </div>
             </ul>
             </div>
         </section>
