add underlining the link
Added with the help of the ::after pseudo-element, the link of the current page is underlined

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                         </a>
                     </li>
                     <li class="header-li">
-                        <a class="header-list" href="./portfolio.html"><span class="portfolio-color">Портфолио</span>
+                        <a class="header-list current" href="./portfolio.html"><span class="portfolio-color">Портфолио</span>
                         </a>
                     </li>
                     <li class="header-li">
