--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </a>
                       <ul class="list">
                 <li class="header-li">
-                    <a class="header-list" href="./index.html">                      
+                    <a class="header-list current" href="./index.html">                      
                         <span class="studio-color">Студия</span> 
                     </a>
                 </li>
