fixed remark hw5

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <body>
-    <header>
+    <header class="header">
         <div class="container header-container">
             <nav style="display: flex">
                 <a class="header-logo" href=""> <span class="web-color">Web</span>Studio
@@ -72,15 +72,15 @@
     <div class="container">
     <h1 class="portfolio-heading filtres-to-hide">Портфолио</h1>
     <ul class="button">
-        <li><button class="button-filters" type="button">Все</button>
+        <li class="li-button-filters"><button class="button-filters" type="button">Все</button>
         </li>
-        <li><button class="button-filters" type="button">Веб-сайты</button>
+        <li class="li-button-filters"><button class="button-filters" type="button">Веб-сайты</button>
         </li>
-        <li><button class="button-filters" type="button">Приложения</button>
+        <li class="li-button-filters"><button class="button-filters" type="button">Приложения</button>
         </li>
-        <li><button class="button-filters" type="button">Дизайн</button>
+        <li class="li-button-filters"><button class="button-filters" type="button">Дизайн</button>
         </li>
-        <li><button class="button-filters" type="button">Маркетинг</button>
+        <li class="li-button-filters"><button class="button-filters" type="button">Маркетинг</button>
         </li>
       </ul>
         
