--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
    
-    <header>
+    <header class="header">
                <div class="container header-container">
                     <nav style="display: flex">    
                         <a class="header-logo" href=""> <span class="web-color">Web</span>Studio
@@ -45,7 +45,7 @@
         <ul class="list">
             <li>
                 <a class="header-contact" href="tel:+380961111111">
-                    <svg class="icons-header" width="16" heigth="12">
+                    <svg class="icons-header" width="16" height="12">
                         <use href="./icons.svg.svg#icon-e-mail">
                          
                         </use>
@@ -55,7 +55,7 @@
             </li>
             <li>
                 <a class="header-contact" href="mailto:info@devstudio.com">
-                    <svg class="icons-header" width="10" heigth="16">
+                    <svg class="icons-header" width="10" height="16">
                         <use href="./icons.svg.svg#icon-martphone">
                             
                         </use>
@@ -413,7 +413,7 @@
     <!-- footer -->
     <footer class="footer">
         <div class="container">
-            <div class="box-footer">
+            <div class="box-footer-address">
         <a class="footer-logo" href=""> <span class="web-color-footer">Web</span>Studio
         </a>
         <address class="address-footer">
